src/test/resources/github299/invalid/gbo_ast_fieber-beyer_spectra_v2.0_20210211_sip_v1.0.tab
e1c93147cd14b08db0ac42a260d68276	MD5	https://sbnarchive.psi.edu/pds4/non_mission/gbo.ast.fieber-beyer.spectra_V2_0/data/_.tab	urn:nasa:pds:gbo_ast_fieber-beyer_spectra:data:6_tab::2.0
